--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 @import 'base/typography';
 
 @import 'components/header';
+@import 'components/course';
+@import 'components/forms';
 @import 'components/footer';
 @import 'layout/layout';
 
