--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -18,6 +18,8 @@ $font-S: 1.4rem;
 $font-M: 1.6rem;
 $font-L: 1.8rem;
 $font-XL: 2rem;
+$font-XXL: 2.2rem;
+$font-XXXL: 2.2rem;
 $font-h1: 5.5rem;
 $font-h2: 4rem;
 
