--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,11 @@
 
 @import 'components/header';
 @import 'components/course';
+@import 'components/credits';
+@import 'components/buttons';
 @import 'components/forms';
 @import 'components/footer';
+
 @import 'layout/layout';
 
 
