--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1,7 +1,9 @@
 /* callback form */
 .contact-form {
-  width: 100%;
+  margin: auto;
+  max-width: 600px;
   padding: 20px;
+  width: 100%;
 
   input {
     width: 100%;
