--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -56,6 +56,11 @@
   }
 }
 
+section {
+  margin: auto;
+  max-width: 1200px;
+}
+
 /* Background/Text Colors */
 .bg-light {
   background: $bg-light;
