--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -1,4 +1,5 @@
 .courses-container_course {
+  position: relative;
   i {
     margin-bottom: 5px;
   }
@@ -10,7 +11,23 @@
     @include flex(row);
   }
 
+  .delete {
+    display: none;
+  }
+
+  &:hover .delete {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    // width: 25px;
+    padding: 6px 8px 3px 8px;
+    background-color: red;
+    border: none;
+    color: $color-light;
+  }
 }
+
 
 span {
   font-size: $font-S;
