add -update button

--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -11,21 +11,33 @@
     @include flex(row);
   }
 
-  .delete {
+  .delete, .update {
     display: none;
   }
 
-  &:hover .delete {
+  &:hover .delete, &:hover .update{
     display: block;
     position: absolute;
     top: 20px;
     right: 40px;
-    // width: 25px;
-    padding: 6px 8px 3px 8px;
+    padding: 6px 7px 2px 7px;
     background-color: red;
     border: none;
     color: $color-light;
   }
+
+  &:hover .update{
+    // display: block;
+    // position: absolute;
+    // top: 20px;
+    right: 70px;
+    padding: 6px 5px 2px 7px;
+    background-color: rgb(0, 174, 255);
+    // border: none;
+    // color: $color-light;
+  }
+
+
 }
 
 
