--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import 'components/course';
 @import 'components/credits';
 @import 'components/buttons';
+@import 'components/user-feedback';
 @import 'components/forms';
 @import 'components/footer';
 
