--- a/src/styles/components/_user-feedback.scss
+++ b/src/styles/components/_user-feedback.scss
@@ -1,5 +1,14 @@
 .feedback {
+  display: none;
+  padding: 10px 20px;
   position: fixed;
-  top: 10px;
   right: 10px;
+  top: 10px;
+
+  #confirm {
+    border: none;
+    border-radius: 5px;
+    margin: 0 0 0 5px;
+    padding: 7.5px 10px;
+  }
 }
