--- a/src/styles/components/_user-feedback.scss
+++ b/src/styles/components/_user-feedback.scss
@@ -1,9 +1,14 @@
 .feedback {
+  border-radius: 3px;
   display: none;
   padding: 10px 20px;
   position: fixed;
   right: 10px;
   top: 10px;
+
+  &:hover {
+    cursor: pointer;
+  }
 
   #confirm {
     border: none;
