--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -16,12 +16,22 @@
     display: none;
   }
 
-  &:hover .delete,
-  &:hover .update {
+  .edit {
+    background-color: transparent;
+    border: none;
     display: block;
     position: absolute;
     top: 20px;
     right: 20px;
+    padding: 6px 7px 2px 7px;
+  }
+
+  .delete,
+  .update {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 45px;
     padding: 6px 7px 2px 7px;
     background-color: red;
     border: none;
@@ -30,15 +40,11 @@
 
   }
 
-  &:hover .update {
-    // display: block;
-    // position: absolute;
-    // top: 20px;
-    right: 50px;
+  .update {
+    display: none;
+    right: 75px;
     padding: 6px 5px 2px 7px;
     background-color: rgb(0, 174, 255);
-    // border: none;
-    // color: $color-light;
   }
 }
 
