--- a/src/styles/components/_user-feedback.scss
+++ b/src/styles/components/_user-feedback.scss
@@ -10,10 +10,7 @@
     cursor: pointer;
   }
 
-  #confirm {
-    border: none;
-    border-radius: 5px;
-    margin: 0 0 0 5px;
-    padding: 7.5px 10px;
+  #feedback-message {
+    color: $color-light;
   }
 }
