--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -18,13 +18,15 @@
   }
 
   .contact-form_buttons {
-    @include flex(row, wrap)
+    margin-top: 10px;
+    @include flex(row);
+
+    .btn {
+      width: 100%;
+    }
   }
 
-  .btn {
-    margin-top: 20px;
-    width: 50%;
-  }
+
 
   #submit {
     @include light-theme(false);
