--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -19,7 +19,7 @@
 
   .contact-form_buttons {
     margin-top: 10px;
-    @include flex(row);
+    @include flex(row-reverse);
 
     .btn {
       width: 100%;
