fix -clean up SCSS files

--- a/src/styles/components/_credits.scss
+++ b/src/styles/components/_credits.scss
@@ -1,13 +1,11 @@
 .credits {
-
   .credits-total {
     @include flex();
     align-items: center;
     justify-content: center;
-  }
 
-  #credits-total_score {
-    display: block;
-    font-size: $font-XXXL;
+    span {
+      font-size: $font-XXL;
+    }
   }
 }
