--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
@@ -135,6 +135,4 @@ table {
   border-spacing: 0;
 }
 
-img {
-  width: 100%;
-}
+
