--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -3,6 +3,7 @@
   border-radius: 5px;
   cursor: pointer;
   display: inline-block;
+  font-family: 'Lobster Two', cursive;
   font-size: $font-M;
   padding: 10px 30px;
   text-decoration: none;
@@ -15,8 +16,9 @@
 /* To Top Button */
 .btn-top {
   @extend .btn;
-  background: #003458;
-  border: 0.5px solid #004577;
+  background: #2d3031;
+  border: 1px solid #5e6469;
+  border-radius: 50%;
   height: 45px;
   padding: 0 1.2em;
   position: fixed;
