fix -Section header styles

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -25,6 +25,10 @@ h2 {
   @include maxWidth(600px) {
     font-size: $font-XXXL;
   }
+  @include maxWidth(335px) {
+    font-size: $font-XXL;
+    font-weight: 400;
+  }
 }
 
 h3 {
