fix -Section header styles

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -3,7 +3,7 @@
   border-radius: 5px;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Lobster Two', cursive;
+  font-family: 'Indie Flower', cursive;
   font-size: $font-M;
   padding: 10px 30px;
   text-decoration: none;
