--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -5,6 +5,14 @@ form {
   padding: 10px 20px;
   width: 100%;
 
+  div {
+    @include flex(column-reverse)
+  }
+
+  label {
+    display: none;
+  }
+
   input {
     width: 100%;
     padding: 4px;
@@ -14,6 +22,10 @@ form {
 
     &:focus {
       outline-color: lighten($darkblue, 80%)
+    }
+
+    &:focus + label {
+      display: block;
     }
   }
 
